<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_hongkong"
        android:title="@string/string_hk"/>


    <item
        android:id="@+id/menu_taiwan"
        android:title="@string/string_tw"/>
    <item
        android:id="@+id/menu_kr"
        android:title="@string/string_kr"/>
    <item
        android:id="@+id/menu_jp"
        android:title="@string/string_japan"/>
    <item
        android:id="@+id/menu_uk"
        android:title="@string/string_gb"/>

    <item
        android:id="@+id/menu_us"
        android:title="@string/string_us"/>

    <item
        android:id="@+id/menu_ru"
        android:title="@string/string_ru"/>

    <item android:id="@+id/menu_ua"
        android:title="@string/string_ua"/>

    <item android:id="@+id/menu_other"
        android:title="@string/string_other"/>

</menu>